# project_NMLT

./: .gitignore  flood_model.pkl  inject_noise.py  notebook.ipynb  pyproject.toml  requirements.txt  streamlit_demo.py
data/: flood_data.csv  flood_dataset.csv
